# lzl-cpp-lib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md
QtProject.template/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
QtProject.template/CMakePresets/: Base.json  UserBase.json.template
QtProject.template/cmake/: README.txt
QtProject.template/docs/: README.md
QtProject.template/src/: CMakeLists.txt
QtProject.template/src/demo/: CMakeLists.txt  global.cpp  global.h  main.cpp  main_object.h
QtProject.template/src/demo/_logging/: init.cpp  init.h
QtProject.template/src/demo/_logging/sinks/: ansi_color_stdout_sink.h  daily_with_header_file_sink.h
QtProject.template/src/demo/_res/: _.qrc  version_info.rc.in
QtProject.template/src/demo/_res/font/: README.md  modify_iconfont_family_name.py
QtProject.template/src/demo/_res/font/iconfont/: README.txt
QtProject.template/src/demo/object/: window_controller.cpp  window_controller.h
QtProject.template/src/libs/: CMakeLists.txt  disable.h
QtProject.template/src/libs/utils_logger/: CMakeLists.txt  lib_logger_exports.h  logger.cpp  logger.h  logger_to_q_text_edit.cpp  logger_to_q_text_edit.h
cmake/: README.md  auto_deploy_for_windows.cmake  auto_install_post_build.cmake  config.cmake
functional/: CMakeLists.txt  function_traits.h  test.cpp
logo/: CMakeLists.txt  logo.cmake  lzl_logo.h
test/: CMakeLists.txt
test/functional/: CMakeLists.txt  test.cpp
test/type/: CMakeLists.txt  test.cpp
type/: CMakeLists.txt  is_lambda.h  maybe_lambda.h  test.cpp  typename.h
type/c++11/: maybe_lambda.h  typename.h
type/c++17/: typename.h
type/c++20/: maybe_lambda.h
utils/: CMakeLists.txt
utils/functional/: CMakeLists.txt  function_traits.h
utils/functional/cxx11/: function_traits.h
utils/type/: CMakeLists.txt  typename.h
utils/type/cxx11/: maybe_lambda.h  typename.h
utils/type/cxx17/: maybe_lambda.h  typename.h
